services/foundry-vtt/fred/app/patches/hostname.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foundry-vtt
spec:
  template:
    spec:
      containers:
        - name: foundryvtt-web
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foundry-vtt
spec:
  hostnames:
    - fred.foundry-vtt.int.fivebytestudios.com
