services/foundry-vtt/fred/app/patches/httproute-backendrefs.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foundry-vtt
spec:
  rules:
    - backendRefs:
      - name: foundry-vtt-fred
        port: 80
