services/foundry-vtt/fred/app/patches/httproute-external-hostname.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foundry-vtt-external
spec:
  hostnames:
    - fred.foundry-vtt.wildfreddy.fivebytestudios.com
